# Proyecto-DEV-2026-1

./: .gitignore  AGENTS.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/core/: config.py  database.py  storage.py
backend/app/logic/: math.py
backend/app/models/: orden_sugerida.py  producto.py  proveedor.py  venta.py
backend/app/repository/: producto_repo.py  proveedor_repo.py  venta_repo.py
backend/app/routes/: dashboard_routes.py  optimizacion_routes.py  productos_routes.py  proveedores_routes.py  ventas_routes.py
backend/tests/: test_api.py  test_math.py  test_models.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/optimizacion/: page.tsx
frontend/app/productos/: page.tsx
frontend/app/proveedores/: page.tsx
frontend/app/ventas/: page.tsx
frontend/components/: Badge.tsx  GlassCard.tsx  GlassTable.tsx  GradientButton.tsx  Header.tsx  Modal.tsx  SearchInput.tsx  StatusIndicator.tsx
frontend/lib/: api.ts  types.ts
