[project]
name = "proyecto-dev-2026"
version = "0.1.0"
description = "Sistema de gestion de inventarios con optimizacion EOQ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
